.internal/Day-3/tracing/article-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: microservices-demo
    component: article-service
  name: article-service
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservices-demo
      component: article-service
  template:
    metadata:
      labels:
        app: microservices-demo
        component: article-service
    spec:
      containers:
      - env:
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              key: connectionString.standard
              name: mongodb-cluster-admin-training
        - name: OTLP_ENDPOINT
          value: http://tempo.tracing.svc.cluster.local:4318/v1/traces
        image: europe-west1-docker.pkg.dev/wsc-kubernetes-training-0/microservices-demo/front-admin:2.0.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: article-service
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        volumeMounts:
        - mountPath: config.yaml
          name: config
          subPath: config.yaml
      volumes:
      - configMap:
          defaultMode: 420
          name: article-service
        name: config
